--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
-  "files": ["./src/styles/style.d.ts"]
+  "files": ["./src/styles/styles.d.ts"]
 }
